--- a/templates/base.html
+++ b/templates/base.html
@@ -2,9 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title> {% block title%} {% endblock title%}</title>
+
 </head>
 <body>
+    <h1>HEADER</h1>
+    <hr>
+    {% block content %}
+    {% endblock content %}
+    <hr>
+    <h6> footer</h6>
 
 </body>
 </html>
