--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,12 @@
 {% extends "base.html" %}
+
+{% block content %}
+    <h1 class="mt-5 mb-5">testing...</h1>
+    <h1 class="mt-5 mb-5">testing...</h1>
+    <h1 class="mt-5 mb-5">testing...</h1>
+    <h1 class="mt-5 mb-5">testing...</h1>
+    <h1 class="mt-5 mb-5">testing...</h1>
+    <h1 class="mt-5 mb-5">testing...</h1>
+    <h1 class="mt-5 mb-5">testing...</h1>
+{% endblock content %}
+
