--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,45 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1 class="mt-5 mb-5">testing...</h1>
-    <h1 class="mt-5 mb-5">testing...</h1>
-    <h1 class="mt-5 mb-5">testing...</h1>
-    <h1 class="mt-5 mb-5">testing...</h1>
-    <h1 class="mt-5 mb-5">testing...</h1>
-    <h1 class="mt-5 mb-5">testing...</h1>
-    <h1 class="mt-5 mb-5">testing...</h1>
+    <div class="container">
+        <table class="table table-striped table-bordered">
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Coin</th>
+                    <th scope="col">Price</th>
+                    <th scope="col">M.Cap</th>
+                    <th scope="col">24hVol.</th>
+                    <th scope="col">24h%</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row">0001</th>
+                    <td>BTC</td>
+                    <td>59,500,00</td>
+                    <td>1.20 trill.</td>
+                    <td>48.05 bill.</td>
+                    <td>-9,70%</td>
+                </tr>
+                <tr>
+                    <th scope="row">0002</th>
+                    <td>BTC</td>
+                    <td>59,500,00</td>
+                    <td>1.20 trill.</td>
+                    <td>48.05 bill.</td>
+                    <td>-9,70%</td>
+                </tr>
+                <tr>
+                    <th scope="row">0003</th>
+                    <td>BTC</td>
+                    <td>59,500,00</td>
+                    <td>1.20 trill.</td>
+                    <td>48.05 bill.</td>
+                    <td>-9,70%</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 {% endblock content %}
 
