--- a/templates/index.html
+++ b/templates/index.html
@@ -1,45 +1,20 @@
 {% extends "base.html" %}
 
-{% block content %}
-    <div class="container">
-        <table class="table table-striped table-bordered">
-            <thead>
+
+    {% block columns %}
+        {% for header in headers %}
+            <th>{{ header }}</th>
+        {% endfor %}
+    {% endblock columns %}
+        {% block table %}
                 <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Coin</th>
-                    <th scope="col">Price</th>
-                    <th scope="col">M.Cap</th>
-                    <th scope="col">24hVol.</th>
-                    <th scope="col">24h%</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th scope="row">0001</th>
+                    <th scope="row">01</th>
                     <td>BTC</td>
                     <td>59,500,00</td>
                     <td>1.20 trill.</td>
                     <td>48.05 bill.</td>
-                    <td>-9,70%</td>
+                    <td>-9.70%</td>
                 </tr>
-                <tr>
-                    <th scope="row">0002</th>
-                    <td>BTC</td>
-                    <td>59,500,00</td>
-                    <td>1.20 trill.</td>
-                    <td>48.05 bill.</td>
-                    <td>-9,70%</td>
-                </tr>
-                <tr>
-                    <th scope="row">0003</th>
-                    <td>BTC</td>
-                    <td>59,500,00</td>
-                    <td>1.20 trill.</td>
-                    <td>48.05 bill.</td>
-                    <td>-9,70%</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-{% endblock content %}
+        {% endblock table %}
+
 
