--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 <head>
     <meta charset="UTF-8">
-    <title> {% block title%}Home{% endblock title%}</title>
+    <title> {% block title%}{% endblock title%}</title>
     <link href="../static/css/bootstrap.css" rel="stylesheet">
     <script src="../static/js/bootstrap.js"></script>
 
@@ -19,7 +19,9 @@
 
 
     <main class="flex-grow-1">
-        <table class="table table-striped table-bordered">
+        <div class="container text-center">
+            <h3>{% block tname%}{% endblock tname%}</h3>
+            <table class="table table-striped table-bordered">
                 <thead>
                     <tr>
                         {% block columns%}
@@ -30,8 +32,8 @@
                     {% block table %}
                     {% endblock table %}
                 </tbody>
-
             </table>
+        </div>
     </main>
 
 
