added table to portfolio page

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 
+{% block title%}Home{% endblock title%}
+
+{% block tname%}Top 15 coins{% endblock tname%}
 
     {% block columns %}
         {% for header in headers %}
@@ -7,6 +10,22 @@
         {% endfor %}
     {% endblock columns %}
         {% block table %}
+                <tr>
+                    <th scope="row">01</th>
+                    <td>BTC</td>
+                    <td>59,500,00</td>
+                    <td>1.20 trill.</td>
+                    <td>48.05 bill.</td>
+                    <td>-9.70%</td>
+                </tr>
+                <tr>
+                    <th scope="row">01</th>
+                    <td>BTC</td>
+                    <td>59,500,00</td>
+                    <td>1.20 trill.</td>
+                    <td>48.05 bill.</td>
+                    <td>-9.70%</td>
+                </tr>
                 <tr>
                     <th scope="row">01</th>
                     <td>BTC</td>
