added routes to login and create acc page and linked with buttons

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,10 +10,10 @@
 <body class="d-flex flex-column h-100">
     <div class="container-fluid">
         <nav class="row navbar-dark bg-secondary mt-2 mb-2">
-            <a class="col navbar-brand mt-2 mb-2" href="#">Hodlers Portfolio</a>
+            <a class="col navbar-brand mt-2 mb-2" href="/">Hodlers Portfolio</a>
             <a class="nav-link mt-2 mb-2" href="#">Settings</a>
-            <button class="btn btn-outline-primary mr-2 mt-2 mb-2" type="submit">Sign In</button>
-            <button class="btn btn-outline-danger mr-2 mt-2 mb-2" type="submit">Sign Up</button>
+            <a href="/sign-in" class="btn btn-outline-primary mr-2 mt-2 mb-2" >Sign In</a>
+            <a href="/sign-up" class="btn btn-outline-danger mr-2 mt-2 mb-2" >Sign Up</a>
         </nav>
     </div>
 
