--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,12 @@
 
 {% block title%}Home{% endblock title%}
 
+{%block hmenu%}
+    <a class="nav-link mt-2 mb-2" href="#">Settings</a>
+    <a href="/sign-in" class="btn btn-outline-primary mr-2 mt-2 mb-2" >Sign In</a>
+    <a href="/sign-up" class="btn btn-outline-danger mr-2 mt-2 mb-2" >Sign Up</a>
+{%endblock hmenu%}
+
 {% block tname%}Top 15 coins{% endblock tname%}
 
     {% block columns %}
