--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -2,6 +2,14 @@
 
 {% block title%}Portfolio{% endblock title%}
 
+{%block hmenu%}
+    <a class="nav-link mt-2 mb-2" href="#">Username</a>
+    <form method = "post">
+        <button type="submit" class="btn btn-outline-primary mr-2 mt-2 mb-2">Sign Out</button>
+    </form>
+
+{%endblock hmenu%}
+
 {% block tname%}User portfolio{% endblock tname%}
 
 {% block columns %}
