--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
     </div>
 
 
-    <main class="flex-grow-1">
+    <main class="flex-grow-1 {% block main_classes %}{% endblock main_classes %}">
         <div class="container text-center">
             <h3>{% block tname%}{% endblock tname%}</h3>
             <table class="table table-striped table-bordered">
