--- a/templates/signup.html
+++ b/templates/signup.html
@@ -12,37 +12,36 @@
 
 {% endblock table %}
 
+{% block main_classes %}d-flex align-items-center{% endblock main_classes %}
+
 {% block form %}
-
-<form>
     <div class="container ">
+        <div class="bg-primary d-flex justify-content-center p-3">
+            <div class="col-md-6">
+                <form method="post">
+                    <div class="form-group ">
+                        <label for="Nam1" >Username</label>
+                        <input type="text" class="form-control" id="Nam1" placeholder="Gigaj Kokana">
+                    </div>
+                    <div class="form-group ">
+                        <label for="Ema1">Email address</label>
+                        <input type="email" class="form-control" id="Ema1" placeholder="name@example.com">
+                    </div>
+                    <div class="form-group ">
+                        <label for="Sur1">Password</label>
+                        <input type="text" class="form-control" id="Sur1" placeholder="8tr0ng_P488w0rd!!!">
+                    </div>
+                    <div class="form-group ">
+                        <label for="Sur1">Repeat password</label>
+                        <input type="text" class="form-control" id="Sur1" placeholder="8tr0ng_P488w0rd!!!">
+                    </div>
+                    <div class="form-group">
+                        <button class="btn btn-outline-primary " type="submit">Submit</button>
+                    </div>
+                </form>
+            </div>
 
-        <div class="bg-primary">
-            <form method="post" class=" col-md-6 mt-4">
-                <div class="form-group ">
-                    <label for="Nam1" >Username</label>
-                    <input type="text" class="form-control" id="Nam1" placeholder="Gigaj Kokana">
-                </div>
-                <div class="form-group ">
-                    <label for="Ema1">Email address</label>
-                    <input type="email" class="form-control" id="Ema1" placeholder="name@example.com">
-                </div>
-                <div class="form-group ">
-                    <label for="Sur1">Password</label>
-                    <input type="text" class="form-control" id="Sur1" placeholder="8tr0ng_P488w0rd!!!">
-                </div>
-                <div class="form-group ">
-                    <label for="Sur1">Repeat password</label>
-                    <input type="text" class="form-control" id="Sur1" placeholder="8tr0ng_P488w0rd!!!">
-                </div>
-
-                <div class="form-group">
-                    <button class="btn btn-outline-danger " type="submit">Submit</button>
-                </div>
-            </form>
         </div>
     </div>
-</form>
-
 {% endblock form %}
 
