--- a/templates/signin.html
+++ b/templates/signin.html
@@ -25,7 +25,7 @@
                     </div>
                     <div class="form-group">
                         <label>Password</label>
-                        <input type="text" class="form-control" placeholder="8tr0ng_P488w0rd!!!">
+                        <input type="password" class="form-control" placeholder="8tr0ng_P488w0rd!!!">
                     </div>
                     <div class="form-group">
                         <button class="btn btn-outline-primary" type="submit">Submit</button>
