--- a/templates/signup.html
+++ b/templates/signup.html
@@ -20,20 +20,20 @@
             <div class="col-md-6">
                 <form method="post">
                     <div class="form-group ">
-                        <label for="Nam1" >Username</label>
-                        <input type="text" class="form-control" id="Nam1" placeholder="Gigaj Kokana">
+                        <label>Username</label>
+                        <input name = "input_username" type="text" class="form-control" placeholder="Gigaj Kokana">
                     </div>
                     <div class="form-group ">
-                        <label for="Ema1">Email address</label>
-                        <input type="email" class="form-control" id="Ema1" placeholder="name@example.com">
+                        <label>Email address</label>
+                        <input name = "input_email" type="email" class="form-control" placeholder="name@example.com">
                     </div>
                     <div class="form-group ">
-                        <label for="Sur1">Password</label>
-                        <input type="text" class="form-control" id="Sur1" placeholder="8tr0ng_P488w0rd!!!">
+                        <label>Password</label>
+                        <input name = "input_password" type="password" class="form-control" placeholder="8tr0ng_P488w0rd!!!">
                     </div>
                     <div class="form-group ">
-                        <label for="Sur1">Repeat password</label>
-                        <input type="text" class="form-control" id="Sur1" placeholder="8tr0ng_P488w0rd!!!">
+                        <label>Confirm password</label>
+                        <input name = "confirm_password" type="password" class="form-control" placeholder="8tr0ng_P488w0rd!!!">
                     </div>
                     <div class="form-group">
                         <button class="btn btn-outline-primary " type="submit">Submit</button>
