--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@
 <html lang="en" class="h-100">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> {% block title%}{% endblock title%}</title>
     <link href="../static/css/bootstrap.css" rel="stylesheet">
     <script src="../static/js/bootstrap.js"></script>
