changed design of front page to better suite smartphone

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,6 @@
 {% block title%}Home{% endblock title%}
 
 {%block hmenu%}
-    <a class="nav-link mt-2 mb-2" href="#">Settings</a>
     <a href="/sign-in" class="btn btn-outline-primary mr-2 mt-2 mb-2" >Sign In</a>
     <a href="/sign-up" class="btn btn-outline-danger mr-2 mt-2 mb-2" >Sign Up</a>
 {%endblock hmenu%}
@@ -18,24 +17,21 @@
         {% block table %}
                 <tr>
                     <th scope="row">01</th>
-                    <td>BTC</td>
-                    <td>59,500,00</td>
+                    <td>BTC 59,500</td>
                     <td>1.20 trill.</td>
                     <td>48.05 bill.</td>
                     <td>-9.70%</td>
                 </tr>
                 <tr>
                     <th scope="row">01</th>
-                    <td>BTC</td>
-                    <td>59,500,00</td>
+                    <td>BTC 59,500</td>
                     <td>1.20 trill.</td>
                     <td>48.05 bill.</td>
                     <td>-9.70%</td>
                 </tr>
                 <tr>
                     <th scope="row">01</th>
-                    <td>BTC</td>
-                    <td>59,500,00</td>
+                    <td>BTC 59,500</td>
                     <td>1.20 trill.</td>
                     <td>48.05 bill.</td>
                     <td>-9.70%</td>
