--- a/templates/base.html
+++ b/templates/base.html
@@ -38,17 +38,17 @@
             {% endblock form %}
         </div>
     </main>
-
-
-    <div class="container-fluid mt-auto">
-        <nav class="row navbar-dark bg-secondary mt-2 mb-2">
-            <a class="col navbar-brand mt-2 mb-2">© Gigaj 2026.</a>
-            <a class="nav-link mt-2 mb-2" href="#">About</a>
-            <a class="nav-link mt-2 mb-2" href="#">Contact</a>
-            <a class="nav-link mt-2 mb-2" href="#">FAQ</a>
-
+    <div class="mt-auto">
+        <nav class="navbar-dark bg-secondary mt-2 mb-2 py-2 px-3">
+            <div class="d-flex justify-content-between align-items-start w-100">
+                <a class="navbar-brand">© Gigaj 2026.</a>
+                <div class="d-flex flex-column flex-md-row align-items-end">
+                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="#">FAQ</a>
+                </div>
+            </div>
         </nav>
     </div>
-
 </body>
 </html>
