started to pull data for 1 coin from API to database and filling table columns from database

--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -13,8 +13,8 @@
 {% block tname%}User portfolio{% endblock tname%}
 
 {% block columns %}
-        {% for header in headers %}
-            <th>{{ header }}</th>
+        {% for thead in theads %}
+            <th>{{ thead }}</th>
         {% endfor %}
     {% endblock columns %}
         {% block table %}
