--- a/templates/index.html
+++ b/templates/index.html
@@ -10,32 +10,44 @@
 {% block tname%}Top 15 coins{% endblock tname%}
 
     {% block columns %}
-        {% for header in headers %}
-            <th>{{ header }}</th>
+        {% for thead in theads %}
+            <th>{{ thead }}</th>
         {% endfor %}
     {% endblock columns %}
         {% block table %}
-                <tr>
-                    <th scope="row">01</th>
-                    <td>BTC 59,500</td>
-                    <td>1.20 trill.</td>
-                    <td>48.05 bill.</td>
-                    <td>-9.70%</td>
-                </tr>
-                <tr>
-                    <th scope="row">01</th>
-                    <td>BTC 59,500</td>
-                    <td>1.20 trill.</td>
-                    <td>48.05 bill.</td>
-                    <td>-9.70%</td>
-                </tr>
-                <tr>
-                    <th scope="row">01</th>
-                    <td>BTC 59,500</td>
-                    <td>1.20 trill.</td>
-                    <td>48.05 bill.</td>
-                    <td>-9.70%</td>
-                </tr>
+            {% if btc %}
+        <tr>
+            <th scope="row">{{ btc.rank }}</th>
+            <td>{{ btc.name }} ${{ "%.2f"|format(btc.price) }}</td>
+            <td>${{ "%.2f"|format(btc.mcap / 1000000000) }}B</td>
+            <td>${{ "%.2f"|format(btc.volume / 1000000000) }}B</td>
+            <td class="{% if btc.change > 0 %}text-success{% else %}text-danger{% endif %}">
+                {{ "%.2f"|format(btc.change) }}%
+            </td>
+        </tr>
+    {% else %}
+        <tr>
+            <th scope="row">01</th>
+            <td>BTC 59,500</td>
+            <td>1.20 trill.</td>
+            <td>48.05 bill.</td>
+            <td>-9.70%</td>
+        </tr>
+    {% endif %}
+    <tr>
+        <th scope="row">02</th>
+        <td>ETH 42,000</td>
+        <td>800 bill.</td>
+        <td>25.05 bill.</td>
+        <td>-5.30%</td>
+    </tr>
+    <tr>
+        <th scope="row">03</th>
+        <td>SOL 120</td>
+        <td>50 bill.</td>
+        <td>5.05 bill.</td>
+        <td>+2.10%</td>
+    </tr>
         {% endblock table %}
 
 
